--- a/pages/login/style.scss
+++ b/pages/login/style.scss
@@ -340,3 +340,7 @@ html, body {
 .form-validate >>> .ant-form-explain {
     margin-bottom: 10px;
 }
+
+.height-bg-auth {
+    min-height: 750px;
+}
