--- a/assets/scss/common/_atomic.scss
+++ b/assets/scss/common/_atomic.scss
@@ -528,3 +528,11 @@ height: 140px;
 .overflow-visible {
 	overflow: visible !important;
 }
+
+.text-center {
+	text-align: center;
+}
+
+.text-spacing {
+	letter-spacing: 2px;
+}
