middleware, method change query params url

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -15,5 +15,6 @@ $colorRed: red;
 $colorOrange: rgb(255, 94, 0);
 $fontOpenSans: 'Open Sans', sans-serif;
 $fontRoboto: 'Roboto', sans-serif;
+$colorPurple : #513F83;
 
 $radiusMain: 6px;
