--- a/assets/scss/common/_common.scss
+++ b/assets/scss/common/_common.scss
@@ -15,7 +15,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	font-family: $fontRoboto;
-	background-color: rgb(248, 248, 248);
+	background-color: #fff;
 }
 
 html {
