--- a/components/v-layout/BaseHeader/style.scss
+++ b/components/v-layout/BaseHeader/style.scss
@@ -1,11 +1,12 @@
 .header {
     box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
-    background-color: #fff;
+    background-color: #ffffff;
 }
 
 .logo {
   width: 50px;
-  height: 50px;
+  height: auto;
+  margin-left: 1rem;
 }
 
 .brand-title {
@@ -16,4 +17,13 @@
 
 .user-dropdown {
   color: #000;
+}
+
+.edit-header {
+  box-shadow: 0px 1px 0px 0px rgba(224,224,224,1); 
+  height: 60px;
+}
+.al-text-color {
+  color: #513F83;
+  font-weight: bold;
 }
