fix search user, sort list user

--- a/pages/admin/user/style.scss
+++ b/pages/admin/user/style.scss
@@ -100,4 +100,9 @@ position: relative;
   overflow: hidden;
 }
 
-
+.create-button {
+  background-color: #6B5B95;
+  border-color: #6B5B95;
+  width: 200px;
+  height: 40px;
+}
