--- a/assets/scss/common/_common.scss
+++ b/assets/scss/common/_common.scss
@@ -14,7 +14,7 @@ body {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-	font-family: $fontRoboto;
+	// font-family: $fontRoboto;
 	background-color: #fff;
 }
 
