--- a/pages/home/job/style.scss
+++ b/pages/home/job/style.scss
@@ -33,14 +33,12 @@
   background-color: #132028;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&amp;display=swap');
 /* body */
- body {
-     background: #edf2f6;
+.bg-client {
+     background: #edf2f6!important;
      font-size: 13px;
-     font-family: 'Ubuntu', sans-serif;
 }
- p{
+p{
      color: #888da8
 }
 /* End body */
