--- a/pages/home/job/style.scss
+++ b/pages/home/job/style.scss
@@ -474,7 +474,7 @@ ul.sidebar-card-list {
      background-color: #00dffc;
 }
  .border, .card {
-     border: 1px solid #eaebec!important;
+     border: 1px solid #1890FF!important;
 }
  .border-top {
      border-top: 1px solid #eaebec!important;
